--- a/1_Trasparent_Login_Form/index.css
+++ b/1_Trasparent_Login_Form/index.css
@@ -53,12 +53,13 @@ html {
   margin-bottom: 2.2rem;
 }
 .field {
+  position: relative;
   background-color: rgba(255, 255, 255, 0.94);
   display: flex;
   align-items: center;
   height: var(--btn-height);
   border-radius: 0.3rem;
-  margin: 0.7rem 0;
+  margin: 3rem 0 0 0;
 }
 .field i {
   color: #555;
@@ -71,7 +72,9 @@ html {
   color: #555;
   font-size: 1rem;
   height: 100%;
+  z-index: 2;
 }
+
 .email__input {
   padding-right: 2rem;
 }
@@ -93,12 +96,27 @@ html {
 .form__btn:hover {
   background: #2691d9;
 }
-.show {
-  opacity: 0;
-  padding: 0.4rem !important;
-  transition: opacity 0.4s ease-in;
+.eye {
+  transition: opacity 0.4s;
 }
-.password__input:valid ~ .show {
+.placeholder {
+  position: absolute;
+  color: #555;
+  left: 2.2rem;
+  z-index: 1;
+  opacity: 0.6;
+  transition: all 0.4s ease-in;
+}
+.left {
+  position: absolute;
+  left: 0px;
+  top: -2rem;
+  color: #fff;
+}
+.hidden {
+  opacity: 0;
+}
+.show {
   opacity: 1;
 }
 .or {
